<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/progress_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/working"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/firstNameLayout"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/progress_text_view"
        android:nextFocusDown="@id/firstNameLayout"
        android:nextFocusUp="@id/firstNameLayout"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/search_term_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_term"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionSearch|flagNoExtractUi" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/newFloatingActionButtonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_search_24dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:onClick="showKeyBoard"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="cancel"
        app:layout_constraintTop_toBottomOf="@id/firstNameLayout"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/definition_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_term_s_definition_will_appear_here_when_found"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintTop_toBottomOf="@id/cancel_button"
        android:layout_margin="16dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_page_index" />

        <TextView
            android:id="@+id/page_index_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/negative_one" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/current_term_index" />

        <TextView
            android:id="@+id/term_index_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/negative_one" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/current_term_index" />

        <TextView
            android:id="@+id/current_term_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/n_a" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/current_term" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/pages_examined" />

        <TextView
            android:id="@+id/pages_examined_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/zero" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/terms_examined" />

        <TextView
            android:id="@+id/terms_examined_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:text="@string/zero" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
